--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 	"dependencies": {
 		"boxen": "^5.0.1",
 		"chalk": "^4.1.2",
+		"node-fetch": "^2.6.1",
 		"readline": "^1.3.0",
 		"shelljs": "^0.8.4"
 	}
